# tournament-calculator

./: .gitignore  README.md  dev_run.py  pyproject.toml  test.py  test_script.py  tmp_debug_movement.py
bridge_movement/core/: pair.py  status.py
bridge_movement/examples/: example_strategy.py  mitchell_example.py
bridge_movement/movement/: __init__.py  base_movement.py  generator.py  howell.py  mitchell.py  strategy.py
bridge_movement/movements/: __init__.py  board_group_movement.py  generator.py  howell.py  mitchell.py  movement.py  strategy.py
bridge_movement/tests/: test_out_anything_temp.py
bridge_movement/tournament/: sector.py  table.py
bridge_tc_library/bws/: __init__.py  client.py
bridge_tc_library/scoring/: __init__.py  calculator.py
bridge_tc_library/structure/: __init__.py
bridge_tc_library/structure/core/: __init__.py  board_group.py  deal.py  pair.py  player.py  position.py
bridge_tc_library/structure/examples/: example_strategy.py
bridge_tc_library/structure/movements/: __init__.py  abstract_rotation.py  generator.py  howell.py  movement.py  rotation_calculator.py  strategy.py
bridge_tc_library/structure/movements/rotations/: __init__.py  analyzer.py  howell.py  mitchell.py
bridge_tc_library/structure/tests/: test_out_anything_temp.py
bridge_tc_library/structure/tournament/: __init__.py  sector.py  table.py  tournament.py  validator.py
bridge_tc_library/structure/tournament/tests/: test_sector_ops.py
tests/: test_board_group.py
